[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://items/RandomCrystal.tscn" type="PackedScene" id=2]
[ext_resource path="res://attacks/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://attacks/Hurtbox.tscn" type="PackedScene" id=4]

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="RandomCrystal" parent="." instance=ExtResource( 2 )]

[node name="PlayerDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
modulate = Color( 0.403922, 0.627451, 0.843137, 1 )

[node name="WanderTimer" type="Timer" parent="."]

[node name="EnemySoftCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySoftCollision"]
modulate = Color( 0.827451, 0.494118, 0.792157, 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 32

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 64

[editable path="Hitbox"]
[editable path="Hurtbox"]
